fix(theme): fix  table horizontal overflow on narrow screens

--- a/theme/src/client/styles/content.css
+++ b/theme/src/client/styles/content.css
@@ -211,7 +211,7 @@
  * Table
  * -------------------------------------------------------------------------- */
 .vp-doc table {
-  display: table;
+  display: block;
   margin: 20px 0;
   overflow-x: auto;
   border-collapse: collapse;
